# schema-tools

./: .cz.toml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE.md  README.md  registry.yaml
.github/workflows/: build-cli-image.yml  build.yml  bump.yml  conventional-commits.yml  release.yaml  test.yaml
crates/cli/: Cargo.toml
crates/cli/src/: error.rs  main.rs
crates/cli/src/commands/: chain.rs  codegen.rs  mod.rs  registry.rs  validate.rs
crates/cli/src/commands/process/: bump_openapi.rs  mod.rs  patch.rs
crates/schematools/: Cargo.toml
crates/schematools/resources/openapi/: schema-3.0.x.json
crates/schematools/resources/test/discovery/test1/: README.md
crates/schematools/resources/test/json-schemas/: 01-simple.json  03-simple-with-external-ref.json  06-with-local-reference.json  09-no-refs-with-names.json  11-grunt-watch-task.json  14-simple-one-of.json  16-string-reference.json  17-ref-multiple.json  18-shared-ref-17.json  20-local-reference.json  21-local-reference-nested.json  22-discriminator-root.json  23-discriminator.json
crates/schematools/resources/test/openapi/: 01-simple.yaml  02-parted-parameters.yaml  02-parted-responses.yaml  02-parted-root.yaml  02-parted-schemas.yaml  03-complex-parted-responses.yaml  03-complex-parted-root.yaml  03-complex-parted-schemas.yaml
crates/schematools/src/: discovery.rs  error.rs  lib.rs  resolver.rs  schema.rs  scope.rs  storage.rs  tools.rs
crates/schematools/src/codegen/: filters.rs  mod.rs  renderer.rs  templates.rs
crates/schematools/src/codegen/jsonschema/: allof.rs  const_.rs  enum_.rs  items.rs  mod.rs  oneof.rs  patternproperties.rs  properties.rs  required.rs  title.rs  types.rs
crates/schematools/src/codegen/jsonschema/anyoneof/: extractor.rs  mod.rs
crates/schematools/src/codegen/jsonschema/oneof/: extractor.rs  mod.rs
crates/schematools/src/codegen/openapi/: endpoint.rs  mod.rs  parameters.rs  responses.rs  security.rs
crates/schematools/src/commands/: chain.rs  mod.rs  process.rs  registry.rs
crates/schematools/src/process/: bump_openapi.rs  dereference.rs  merge_allof.rs  mod.rs  patch.rs
crates/schematools/src/process/name/: endpoint.rs  jsonschema.rs  openapi.rs  word.rs
crates/schematools/src/validate/: mod.rs
resources/openapi/: schema-3.1.x.json
resources/test/json-schemas/: 02-simple-with-reference.json  04-with-nested-external-ref.json  05-with-nested-remote-external-ref.json  07-with-infinite-ref.json  08-with-refs-and-names.json  10-grafana.json  12-json-patch.json  13-solidarity-schema.json  15-simple-enum.json  19-local-reference-nested.json
src/: discovery.rs  error.rs  hash.rs  lib.rs  main.rs  resolver.rs  schema.rs  scope.rs  storage.rs  tools.rs
src/codegen/: filters.rs  mod.rs  renderer.rs  templates.rs
src/codegen/jsonschema/: additionalproperties.rs  const_.rs  enum_.rs  items.rs  mod.rs  oneof.rs  patternproperties.rs  properties.rs  required.rs  types.rs
src/codegen/openapi/: endpoint.rs  mod.rs  parameters.rs  requestbody.rs  responses.rs
src/commands/: chain.rs  codegen.rs  mod.rs  process.rs  registry.rs  validate.rs
src/process/: bump_openapi.rs  dereference.rs  merge.rs  merge_allof.rs  merge_openapi.rs  mod.rs  patch.rs
src/process/name/: endpoint.rs  jsonschema.rs  mod.rs  openapi.rs  word.rs
src/validate/: mod.rs
