[workspace]
members = [
    "crates/schematools",
    "crates/cli"
]

[workspace.package]
license = "MIT"
repository = "https://github.com/kstasik/schema-tools"
version = "0.13.0"

[workspace.dependencies]
reqwest = { version = "0.11.12", default-features = false, features = ["blocking"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9.14"
log = "0.4"
thiserror = "1.0"
