[workspace]
resolver = "2"
members = [
    "crates/schematools",
    "crates/cli"
]

[workspace.package]
license = "MIT"
repository = "https://github.com/kstasik/schema-tools"
version = "0.22.0"

[workspace.dependencies]
reqwest = { version = "0.11.22", default-features = false, features = ["default-tls", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
log = "0.4"
thiserror = "1.0"
