[package]
name = "schematools-cli"
description = "Tools for codegen, preprocessing and validation of json-schema and openapi spec"
edition = "2018"
license.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = ["codegen", "git2", "http", "json-patch"]
codegen = ["schematools/codegen"]
git2 = ["schematools/git2"]
http = ["schematools/http"]
json-patch = ["schematools/json-patch"]
semver = ["schematools/semver"]

[dependencies]
serde_json = { workspace = true }
serde_yaml = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }

clap = { version = "4.1", features = ["derive"] }
env_logger = "0.10"
sha2 = "0.10.1"
serde = { version = "1.0", features = ["derive"] }

schematools = { path = "../schematools" }