[package]
name = "schematools-cli"
description = "Tools for codegen, preprocessing and validation of json-schema and openapi spec"
edition = "2021"
license.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = ["codegen", "git2", "http", "json-patch", "semver"]
codegen = ["schematools/codegen"]
git2 = ["schematools/git2"]
http = ["schematools/http"]
json-patch = ["schematools/json-patch"]
semver = ["schematools/semver"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }

clap = { version = "4.4", features = ["derive"] }
env_logger = "0.10"
sha2 = "0.10"

schematools = { version = "0.19.2", path = "../schematools" }
