[package]
name = "schematools"
description = "Tools for codegen, preprocessing and validation of json-schema and openapi spec"
edition = "2018"
license.workspace = true
readme = "../../README.md"
repository.workspace = true
version.workspace = true

[features]
default = ["codegen", "git2", "json-patch"]
codegen = ["tera", "semver"]

[dependencies]
serde_json = { workspace = true }
serde_yaml = { workspace = true }
reqwest = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }

url = "2"
lazy_static = "1.4.0"
regex = "1"
jsonschema = { version = "0.14", default-features = false, features = ["reqwest", "reqwest-rustls-tls"] }
tera = { version = "1", default-features = false, optional = true }
serde = { version = "1.0", features = ["derive"] }
walkdir = "2"
json-patch = { version = "0.2.6", optional = true }
semver = { version = "1.0", optional = true }
git2 = { version = "0.16", optional = true }
md5 = "0.7.0"
Inflector = "0.11"
digest = "0.10.1"

[dev-dependencies]
test-case = "3.0"
testing_logger = "0.1.1"
