[package]
name = "schematools"
description = "Tools for codegen, preprocessing and validation of json-schema and openapi spec"
edition = "2021"
license.workspace = true
readme = "../../README.md"
repository.workspace = true
version.workspace = true

[features]
default = ["codegen", "git2", "http", "json-patch"]
codegen = ["tera", "semver"]
http = ["jsonschema/resolve-http", "reqwest"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
reqwest = { workspace = true, optional = true }
log = { workspace = true }
thiserror = { workspace = true }

url = "2"
lazy_static = "1.4.0"
regex = "1"
jsonschema = { version = "0.17", default-features = false, features = ["resolve-file"] }
tera = { version = "1", default-features = false, optional = true }
walkdir = "2"
json-patch = { version = "1.2", optional = true }
semver = { version = "1.0", optional = true }
git2 = { version = "0.18", optional = true }
md5 = "0.7.0"
Inflector = { version = "0.11" }
digest = "0.10.1"

[dev-dependencies]
serial_test = "2.0"
test-case = "3.3"
testing_logger = "0.1.1"
